Add util method for repeating state manipulations
Hopefully this avoids that I implement the same stupid algorithm for the fourth time and make the same stupid mistakes all over again or run into strange edge cases that just cost too much time